--- a/kadai_okinaga/index.html
+++ b/kadai_okinaga/index.html
@@ -48,7 +48,7 @@
         </nav>
         <div class="slider">
             <picture>
-                <source srcset="./images/about_us@2x-100.jpg" media="(max-width: 767px)">
+                <source srcset="./images/sp_main_vs@2x-100.jpg" media="(max-width: 767px)">
                 <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子の写真">
             </picture>
         </div>
